utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_rename_all_fields_adjacently_tagged.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 1408
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "content": {
          "properties": {
            "anotherField": {
              "type": "string"
            },
            "someNumber": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "someNumber",
            "anotherField"
          ],
          "type": "object"
        },
        "tag": {
          "enum": [
            "One"
          ],
          "type": "string"
        }
      },
      "required": [
        "content",
        "tag"
      ],
      "type": "object"
    },
    {
      "properties": {
        "content": {
          "properties": {
            "yetAnother": {
              "type": "boolean"
            }
          },
          "required": [
            "yetAnother"
          ],
          "type": "object"
        },
        "tag": {
          "enum": [
            "Two"
          ],
          "type": "string"
        }
      },
      "required": [
        "content",
        "tag"
      ],
      "type": "object"
    }
  ]
}
