utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_rename_all_fields_does_not_affect_unnamed_variant.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 1441
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "Named": {
          "properties": {
            "someNumber": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "someNumber"
          ],
          "type": "object"
        }
      },
      "required": [
        "Named"
      ],
      "type": "object"
    },
    {
      "properties": {
        "Unnamed": {
          "$ref": "#/components/schemas/Bar"
        }
      },
      "required": [
        "Unnamed"
      ],
      "type": "object"
    },
    {
      "enum": [
        "Unit"
      ],
      "type": "string"
    }
  ]
}
