utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_rename_all_fields_untagged.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 1363
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "someNumber": {
          "format": "int32",
          "type": "integer"
        }
      },
      "required": [
        "someNumber"
      ],
      "type": "object"
    },
    {
      "properties": {
        "anotherField": {
          "type": "string"
        }
      },
      "required": [
        "anotherField"
      ],
      "type": "object"
    }
  ]
}
