utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_rename_all_fields_with_field_rename_override.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 1380
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "One": {
          "properties": {
            "custom_name": {
              "type": "string"
            },
            "someNumber": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "someNumber",
            "custom_name"
          ],
          "type": "object"
        }
      },
      "required": [
        "One"
      ],
      "type": "object"
    }
  ]
}
