utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_rename_variant.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "enum": [
        "renamed_unit_value"
      ],
      "type": "string"
    },
    {
      "properties": {
        "renamed_named_fields": {
          "properties": {
            "renamed_id": {
              "type": "string"
            },
            "renamed_names": {
              "items": {
                "type": "string"
              },
              "type": [
                "array",
                "null"
              ]
            }
          },
          "required": [
            "renamed_id"
          ],
          "type": "object"
        }
      },
      "required": [
        "renamed_named_fields"
      ],
      "type": "object"
    },
    {
      "properties": {
        "renamed_unnamed_fields": {
          "$ref": "#/components/schemas/Foo"
        }
      },
      "required": [
        "renamed_unnamed_fields"
      ],
      "type": "object"
    }
  ]
}
