utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_tag.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "properties": {
        "tag": {
          "enum": [
            "UnitValue"
          ],
          "type": "string"
        }
      },
      "required": [
        "tag"
      ],
      "type": "object"
    },
    {
      "properties": {
        "id": {
          "type": "string"
        },
        "names": {
          "items": {
            "type": "string"
          },
          "type": [
            "array",
            "null"
          ]
        },
        "tag": {
          "enum": [
            "NamedFields"
          ],
          "type": "string"
        }
      },
      "required": [
        "id",
        "tag"
      ],
      "type": "object"
    }
  ]
}
