utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_tag_title.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "properties": {
        "tag": {
          "enum": [
            "UnitValue"
          ],
          "type": "string"
        }
      },
      "required": [
        "tag"
      ],
      "title": "Unit",
      "type": "object"
    },
    {
      "properties": {
        "id": {
          "type": "string"
        },
        "tag": {
          "enum": [
            "NamedFields"
          ],
          "type": "string"
        }
      },
      "required": [
        "id",
        "tag"
      ],
      "title": "Named",
      "type": "object"
    }
  ]
}
