utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_untagged.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "oneOf": [
    {
      "format": "int32",
      "type": "integer"
    },
    {
      "type": "string"
    }
  ],
  "title": "FooTitle"
}
